import { StatusCard, StatusCell, StatusTag } from '@sas/ui'
import { CaseDto as Case } from '@sas/api'
import {
  govukDetails,
  govukDetailsList,
  riskLevelTag,
  statusCard,
  statusCell,
  statusTag,
  textBlock,
  tierScoreTag,
} from './macros'

describe('Macros', () => {
  describe('Status Tag', () => {
    it('renders a status tag with given colour', () => {
      const tag: StatusTag = {
        text: 'Foo',
        colour: 'red',
      }

      expect(statusTag(tag)).toMatchSnapshot()
    })

    it('renders a status tag with the default colour', () => {
      const tag: StatusTag = {
        text: 'Baz',
      }

      expect(statusTag(tag)).toMatchSnapshot()
    })

    it('renders a status tag with classes when classes is provided', () => {
      const tag: StatusTag = {
        text: 'Qux',
        colour: 'blue',
      }

      expect(statusTag(tag, 'govuk-tag--no-wrap')).toMatchSnapshot()
    })
  })

  describe('Status Cell', () => {
    beforeEach(() => {
      jest.useFakeTimers().setSystemTime(new Date('2025-12-10'))
    })

    afterEach(() => {
      jest.useRealTimers()
    })

    it('renders a status cell without date text', () => {
      const cell: StatusCell = {
        status: { text: 'Foo' },
      }

      expect(statusCell(cell)).toMatchSnapshot()
    })

    it('renders a status cell with date text', () => {
      const cell: StatusCell = {
        status: { text: 'Foo' },
        dateText: 'Submitted 5 days ago',
      }

      expect(statusCell(cell)).toMatchSnapshot()
    })

    it('renders a status cell with details', () => {
      const cell: StatusCell = {
        status: { text: 'Foo' },
        details: [{ text: 'Detail 1' }, { html: '<p>Detail 2</p>' }],
      }

      expect(statusCell(cell)).toMatchSnapshot()
    })
  })

  describe('riskLevelTag', () => {
    it.each(['LOW', 'MEDIUM', 'HIGH', 'VERY_HIGH'])(
      'renders a risk level tag for risk level %s',
      (level: Case['riskLevel']) => {
        expect(riskLevelTag(level)).toMatchSnapshot()
      },
    )

    it('renders an unknown risk level tag', () => {
      expect(riskLevelTag(undefined)).toMatchSnapshot()
    })
  })

  describe('tierScoreTag', () => {
    it.each([
      ['known', 'D3S' as const],
      ['empty', '' as const],
      ['undefined', undefined],
    ])('renders tag if tier is %s', (_, tierScore) => {
      expect(tierScoreTag(tierScore)).toMatchSnapshot()
    })
  })

  describe('Status Card', () => {
    it('renders a basic status card', () => {
      const card: StatusCard = {
        heading: 'Foo',
      }

      expect(statusCard(card)).toMatchSnapshot()
    })

    it('renders an inactive status card', () => {
      const card: StatusCard = {
        heading: 'Foo',
        inactive: true,
      }

      expect(statusCard(card)).toMatchSnapshot()
    })

    it('renders a status card with full information', () => {
      const card: StatusCard = {
        heading: 'Foo',
        status: {
          text: 'Bar',
          colour: 'red',
        },
        hint: 'Some hint text',
        details: [{ key: { text: 'Baz' }, value: { text: 'Qux' } }],
        links: [
          { text: 'Quux', href: '#' },
          { text: 'Foo', href: 'https://example.com', external: true },
        ],
      }

      expect(statusCard(card)).toMatchSnapshot()
    })
  })

  describe('govukDetails', () => {
    it('renders a details component with the given summary and text', () => {
      expect(govukDetails('Reason details', 'Some longer explanation')).toMatchSnapshot()
    })
  })

  describe('govukDetailsList', () => {
    it('renders a details component with escaped list items', () => {
      expect(
        govukDetailsList('Previous placements', ['A normal item', '<script>alert("escaped!")</script>']),
      ).toMatchSnapshot()
    })
  })

  describe('textBlock', () => {
    it('renders a text block', () => {
      expect(textBlock(`Some text\n\nmultiple lines\n\n<script>alert("escaped!")</script>`)).toMatchSnapshot()
    })
  })
})
