// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Macros Status Card renders a basic status card 1`] = `
"

  <article class="sas-card">
    <header class="sas-card__head">
      <h3 class="govuk-heading-m">Foo</h3>
      
    </header>

    <div class="sas-card__footer">
      <div class="sas-card__content">
        

        

        
      </div>

      
    </div>
  </article>"
`;

exports[`Macros Status Card renders a status card with full information 1`] = `
"

  <article class="sas-card">
    <header class="sas-card__head">
      <h3 class="govuk-heading-m">Foo</h3>
      <strong class="govuk-tag govuk-tag--red govuk-tag--no-wrap">Bar</strong>
    </header>

    <div class="sas-card__footer">
      <div class="sas-card__content">
        
          <p class="sas-card__hint">Some hint text</p>
        

        
          

  
<dl class="govuk-summary-list sas-card-summary-list govuk-summary-list--no-border">

  
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Baz
    </dt>
    <dd class="govuk-summary-list__value">
      Qux
    </dd>
    
  </div>
  

</dl>

        

        
      </div>

      
        <div class="sas-card__links">
          
            <a
              class="govuk-body govuk-link govuk-link--no-visited-state"
              href="#"
              
            >
              Quux
            </a>
          
            <a
              class="govuk-body govuk-link govuk-link--no-visited-state"
              href="https://example.com"
              target="_blank" rel="noreferrer noopener"
            >
              Foo
            </a>
          
        </div>
      
    </div>
  </article>"
`;

exports[`Macros Status Card renders an inactive status card 1`] = `
"

  <article class="sas-card sas-card--inactive">
    <header class="sas-card__head">
      <h3 class="govuk-heading-m">Foo</h3>
      
    </header>

    <div class="sas-card__footer">
      <div class="sas-card__content">
        

        

        
      </div>

      
    </div>
  </article>"
`;

exports[`Macros Status Cell renders a status cell with date text 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag">Foo</strong>
    <p class="sas-status__date">Submitted 5 days ago</p>"
`;

exports[`Macros Status Cell renders a status cell with details 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag">Foo</strong>
    
      
        <p class="govuk-!-margin-bottom-1">Detail 1</p>
      
    
      
        <p>Detail 2</p>
      
    "
`;

exports[`Macros Status Cell renders a status cell without date text 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag">Foo</strong>"
`;

exports[`Macros Status Tag renders a status tag with classes when classes is provided 1`] = `"<strong class="govuk-tag govuk-tag--blue govuk-tag--no-wrap">Qux</strong>"`;

exports[`Macros Status Tag renders a status tag with given colour 1`] = `"<strong class="govuk-tag govuk-tag--red">Foo</strong>"`;

exports[`Macros Status Tag renders a status tag with the default colour 1`] = `"<strong class="govuk-tag">Baz</strong>"`;

exports[`Macros govukDetails renders a details component with the given summary and text 1`] = `
"<details class="govuk-details govuk-!-margin-bottom-1">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      Reason details
    </span>
  </summary>
  <div class="govuk-details__text">
    Some longer explanation
  </div>
</details>
"
`;

exports[`Macros govukDetailsList renders a details component with escaped list items 1`] = `
"

  <details class="govuk-details govuk-!-margin-bottom-1">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      Previous placements
    </span>
  </summary>
  <div class="govuk-details__text">
    
    <ul class="govuk-list govuk-list--bullet">
      
        <li>A normal item</li>
      
        <li>&lt;script&gt;alert(&quot;escaped!&quot;)&lt;/script&gt;</li>
      
    </ul>
  
  </div>
</details>
"
`;

exports[`Macros riskLevelTag renders a risk level tag for risk level HIGH 1`] = `
"<div class="sas-risk-tag sas-risk-tag--high">
      <dt>RoSH</dt>
      <dd>High</dd>
    </div>
  "
`;

exports[`Macros riskLevelTag renders a risk level tag for risk level LOW 1`] = `
"<div class="sas-risk-tag sas-risk-tag--low">
      <dt>RoSH</dt>
      <dd>Low</dd>
    </div>
  "
`;

exports[`Macros riskLevelTag renders a risk level tag for risk level MEDIUM 1`] = `
"<div class="sas-risk-tag sas-risk-tag--medium">
      <dt>RoSH</dt>
      <dd>Medium</dd>
    </div>
  "
`;

exports[`Macros riskLevelTag renders a risk level tag for risk level VERY_HIGH 1`] = `
"<div class="sas-risk-tag sas-risk-tag--very-high">
      <dt>RoSH</dt>
      <dd>Very high</dd>
    </div>
  "
`;

exports[`Macros riskLevelTag renders an unknown risk level tag 1`] = `""`;

exports[`Macros textBlock renders a text block 1`] = `
"<div class="sas-text-block">Some text

multiple lines

&lt;script&gt;alert(&quot;escaped!&quot;)&lt;/script&gt;</div>"
`;

exports[`Macros tierScoreTag renders tag if tier is empty 1`] = `""`;

exports[`Macros tierScoreTag renders tag if tier is known 1`] = `
"
    <div class="sas-risk-tag sas-risk-tag--tier">
      <dt>Tier</dt>
      <dd>D3S</dd>
    </div>
  "
`;

exports[`Macros tierScoreTag renders tag if tier is undefined 1`] = `""`;
